added innerHTML code

--- a/UI/src/app/component/recommendations/recommendations.component.html
+++ b/UI/src/app/component/recommendations/recommendations.component.html
@@ -60,11 +60,11 @@
                                 [ngClass]="{'m1': item.maturity == 1, 'm2': item.maturity == 2, 'm3': item.maturity == 3, 'm4': item.maturity == 4, 'm5': item.maturity == 5}">
                                 <span class="maturity-level">
                                     <!-- <span class="maturity-indicator"></span> -->
-                                    {{ "M"+item.maturity }}
+                                    {{ item.maturity ? "M"+item.maturity : 'NA' }}
                                 </span>
                             </td>
-                            <td>{{ item.recommendationSummary }}</td>
-                            <td>{{ item.recommendationDetails }}</td>
+                            <td><span [innerHTML]="item.recommendationSummary"></span></td>
+                            <td><span [innerHTML]="item.recommendationDetails"></span></td>
                         </tr>
                     </ng-template>
                     <ng-template pTemplate="emptymessage">
