--- a/UI/src/app/dashboard/iteration/iteration.component.css
+++ b/UI/src/app/dashboard/iteration/iteration.component.css
@@ -297,3 +297,7 @@ padding: 0.75rem !important;
     display: flex;
     flex-direction: column;
 }
+
+:host ::ng-deep .p-datatable-scrollable .p-datatable-wrapper{
+    min-height: 300px;
+}
