recommendations popup shown only 1 single project is selected

--- a/UI/src/app/dashboard/backlog/backlog.component.html
+++ b/UI/src/app/dashboard/backlog/backlog.component.html
@@ -666,4 +666,6 @@
 </p-dialog>
 
 <app-export-excel #exportExcel></app-export-excel>
-<app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
+<ng-container *ngIf="filterApplyData?.label == 'project' && filterApplyData?.ids?.length == 1">
+  <app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
+</ng-container>
