--- a/UI/src/app/dashboard/dora/dora.component.html
+++ b/UI/src/app/dashboard/dora/dora.component.html
@@ -351,4 +351,6 @@
 </ng-template>
 
 <app-export-excel #exportExcel></app-export-excel>
-<app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
+<ng-container *ngIf="filterApplyData?.label == 'project' && filterApplyData?.ids?.length == 1">
+  <app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
+</ng-container>
