--- a/UI/src/app/dashboard/executive/executive.component.html
+++ b/UI/src/app/dashboard/executive/executive.component.html
@@ -131,5 +131,6 @@
 </ng-template>
 
 <app-export-excel #exportExcel></app-export-excel>
-
-<app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
+<ng-container *ngIf="filterApplyData?.label == 'project' && filterApplyData?.ids?.length == 1">
+  <app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
+</ng-container>
