--- a/UI/src/app/dashboard/milestone/milestone.component.html
+++ b/UI/src/app/dashboard/milestone/milestone.component.html
@@ -107,7 +107,7 @@
                                           [xCaption]="kpi?.kpiDetail?.xaxisLabel"
                                           [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
                                           [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList"
+                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList" [releaseEndDate]="releaseEndDate"
                                           [selectedtype]="selectedtype" [kpiId]="kpi?.kpiId" [legendType]="'normal'">
                                         </app-group-bar-chart>
 
@@ -271,7 +271,7 @@
                                           [xCaption]="kpi?.kpiDetail?.xaxisLabel"
                                           [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
                                           [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList"
+                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList" [releaseEndDate]="releaseEndDate"
                                           [selectedtype]="selectedtype" [kpiId]="kpi?.kpiId" [legendType]="'normal'">
                                         </app-group-bar-chart>
                                         <ng-container *ngSwitchCase="'chartWithFilter'">
@@ -455,7 +455,7 @@
                                           [xCaption]="kpi?.kpiDetail?.xaxisLabel"
                                           [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
                                           [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList"
+                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList" [releaseEndDate]="releaseEndDate"
                                           [selectedtype]="selectedtype" [kpiId]="kpi?.kpiId" [legendType]="'normal'">
                                         </app-group-bar-chart>
 
@@ -621,7 +621,7 @@
                                           [xCaption]="kpi?.kpiDetail?.xaxisLabel"
                                           [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
                                           [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList"
+                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList" [releaseEndDate]="releaseEndDate"
                                           [selectedtype]="selectedtype" [kpiId]="kpi?.kpiId" [legendType]="'normal'">
                                         </app-group-bar-chart>
 
