DTS-36748 showing avg velocity on widget

--- a/UI/src/app/component/group-bar-chart/group-bar-chart.component.css
+++ b/UI/src/app/component/group-bar-chart/group-bar-chart.component.css
@@ -176,3 +176,10 @@
     stroke: #000;
     stroke-width: 3px;
   }
+
+  :host #date-container{
+    position: absolute;
+    right: 10px;
+    font-size: 13px;
+    font-weight: 600;
+  }
