--- a/UI/src/app/component/group-bar-chart/group-bar-chart.component.html
+++ b/UI/src/app/component/group-bar-chart/group-bar-chart.component.html
@@ -16,6 +16,7 @@
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
   <div id="groupstackchart">
+    <div *ngIf="totalAvgVelocity" id="date-container"></div>
     <div id="graphContainer">
       <div id="verticalSVG" style="float:left;">
       </div>
