--- a/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.html
+++ b/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.html
@@ -101,7 +101,7 @@
         <div *ngIf="!singleSelectionDropdown" class="multiselect-container p-field p-col-12">
             <p-multiSelect *ngIf="populateDropdowns" inputId="multiSelectionDropdown"
                 [style]="{'width':'436px', 'max-width': '100%', 'font-size': '14px'}" [options]="fieldMappingMultiSelectValues"
-                defaultLabel="Select Values" [(ngModel)]="selectedMultiValue" optionLabel="key" display="chip">
+                defaultLabel="Select Values" [(ngModel)]="selectedMultiValue" optionLabel="key" display="chip" optionDisabled="disabled">
             </p-multiSelect>
         </div>
     </div>
