--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -33,7 +33,7 @@
                         <div class="selected-node-label p-pl-0">
                             <span class="align-list-marker" [title]="colorObj[item]?.nodeName"
                                 [ngStyle]="{'background':colorObj[item]?.color}"></span>
-                            <span class="p-l-1">{{ colorObj[item]?.nodeName?.length<= 20 ? colorObj[item]?.nodeName :
+                            <span class="p-l-1">{{filterType | uppercase}} {{ colorObj[item]?.nodeName?.length<= 20 ? colorObj[item]?.nodeName :
                                     colorObj[item]?.nodeName?.slice(0,20)+'...'}} <span class="remove-node"
                                     (click)="removeFilter(colorObj[item]?.nodeId)">&times;</span>
                             </span>
