--- a/UI/src/app/component/grouped-column-plus-line-chart-v2/grouped-column-plus-line-chart-v2.component.css
+++ b/UI/src/app/component/grouped-column-plus-line-chart-v2/grouped-column-plus-line-chart-v2.component.css
@@ -96,7 +96,8 @@
 }
 
 :host ::ng-deep.tooltip-container {
-    position: relative
+    position: relative;
+    z-index: 999;
 }
 
 :host ::ng-deep .y-axis-grid .domain {
