--- a/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
@@ -7,8 +7,13 @@
                 [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}" [selectionLimit]="6"
                 [selectedItemsLabel]="'{0} selected'" defaultLabel="Select"
                 [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="addnlFilterDiv"
-                [ngModel]="filterDisplayValue" [options]="filterData[i]"
-                (onChange)="applyAdditionalFilter($event, i + 1, true)">
+                [(ngModel)]="selectedFilters" [options]="filterData[i]">
+                <ng-template pTemplate="footer">
+                    <div class="p-p-3 p-text-right">
+                        <p-button label="Apply" (onClick)="applyAdditionalFilter(selectedFilters, i + 1, true)"
+                            [style]="{backgroundColor: '#0B4BC8'}"></p-button>
+                    </div>
+                </ng-template>
             </p-multiSelect>
             <label class="floating-label" for="multiselectFilter">Select {{ config.defaultLevel.labelName }}</label>
         </span>
@@ -17,7 +22,7 @@
             <p-dropdown inputId="singleselectFilter" placeholder="Select" optionLabel="nodeName" optionValue="nodeId"
                 [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}"
                 [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="addnlFilterDiv"
-                [ngModel]="filterDisplayValue" [options]="filterData[i]"
+                [(ngModel)]="selectedFilters" [options]="filterData[i]"
                 (onChange)="applyAdditionalFilter($event, i + 1)">
             </p-dropdown>
             <label class="floating-label" for="singleselectFilter">Select {{ config.defaultLevel.labelName
