--- a/UI/src/app/dashboard/milestone/milestone.component.html
+++ b/UI/src/app/dashboard/milestone/milestone.component.html
@@ -254,15 +254,15 @@
                                         *ngIf="ifKpiExist(kpi.kpiId) != -1; else loader">
                                         <ng-container *ngIf="kpiChartData[kpi?.kpiId]?.length > 0   ; else noData">
                                           <ng-container *ngSwitchCase="'stackedColumn'">
-                                            <ng-container *ngIf="dataPresentObj[kpi?.kpiId]">
-                                              <app-groupstackchart [legendType]="'normal'" [xCaption]="kpi?.kpiDetail?.xaxisLabel"
-                                                [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
-                                                [filter]="kpiSelectedFilterObj[kpi?.kpiId]" [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                                [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList" [kpiId]="kpi?.kpiId" [selectedtype]="selectedtype"
-                                                [activeTab]="activeIndex"
-                                                [isAggregationStacks]="(kpi?.kpiDetail?.isAggregationStacks === false) ? false : true"></app-groupstackchart>
+                                            <ng-container *ngIf="checkIfDataPresent(kpiChartData[kpi?.kpiId]);">
+                                            <app-groupstackchart [legendType]="'normal'" [xCaption]="kpi?.kpiDetail?.xaxisLabel"
+                                              [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
+                                              [filter]="kpiSelectedFilterObj[kpi?.kpiId]" [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
+                                              [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList" [kpiId]="kpi?.kpiId" [selectedtype]="selectedtype"
+                                              [activeTab]="activeIndex"
+                                              [isAggregationStacks]="(kpi?.kpiDetail?.isAggregationStacks === false) ? false : true"></app-groupstackchart>
                                             </ng-container>
-                                            <ng-container *ngIf="!dataPresentObj[kpi?.kpiId]">
+                                            <ng-container *ngIf="!checkIfDataPresent(kpiChartData[kpi?.kpiId]);">
                                               <ng-container
                                                 *ngTemplateOutlet="zeroData; context:  { $implicit: kpiSelectedFilterObj[kpi?.kpiId] }">
                                               </ng-container>
@@ -275,26 +275,34 @@
                                             [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList"
                                             [selectedtype]="selectedtype" [kpiId]="kpi?.kpiId" [legendType]="'normal'">
                                           </app-group-bar-chart>
-
+                                          <ng-container *ngSwitchCase="'chartWithFilter'">
+                                            <ng-container *ngIf="kpiChartData[kpi?.kpiId]?.[0]?.data?.length; else noDataForChartWithFilters">
+                                              <app-chart-with-filters [data]="kpiChartData[kpi?.kpiId]?.[0]?.data"
+                                                [kpiId]="kpi?.kpiId" [kpiName]="kpi?.kpiName"
+                                                [filters]="kpiChartData[kpi?.kpiId]?.[0]?.filters"
+                                                [modalHeads]="kpiChartData[kpi?.kpiId]?.[0]?.modalHeads">
+                                              </app-chart-with-filters>
+                                            </ng-container>
+                                          </ng-container>
                                             <ng-container *ngSwitchCase="'pieChart'">
-                                              <ng-container *ngIf="dataPresentObj[kpi?.kpiId]">
+                                              <ng-container *ngIf="checkIfDataPresent(kpiChartData[kpi?.kpiId]);">
                                                 <app-piechart [data]="kpiChartData[kpi?.kpiId]"></app-piechart>
                                               </ng-container>
-                                              <ng-container *ngIf="!dataPresentObj[kpi?.kpiId]">
-                                                <ng-container
-                                                  *ngTemplateOutlet="zeroData; context:  { $implicit: kpiSelectedFilterObj[kpi?.kpiId] }"></ng-container>
+                                              <ng-container *ngIf="!checkIfDataPresent(kpiChartData[kpi?.kpiId]);">
+                                              <ng-container
+                                                *ngTemplateOutlet="zeroData; context:  { $implicit: kpiSelectedFilterObj[kpi?.kpiId] }"></ng-container>
                                               </ng-container>
                                             </ng-container>
                                             <ng-container *ngSwitchCase="'horizontalPercentBarChart'">
-                                              <ng-container *ngIf="dataPresentObj[kpi?.kpiId]">
-                                                <app-horizontal-percent-bar-chart [kpiId]="kpi?.kpiId"
-                                                  [kpiWidth]="kpi?.kpiDetail?.kpiWidth" [data]="kpiChartData[kpi?.kpiId]"
-                                                  [activeTab]="activeIndex">
-                                                </app-horizontal-percent-bar-chart>
-                                              </ng-container>
-                                              <ng-container *ngIf="!dataPresentObj[kpi?.kpiId]">
-                                                <ng-container
-                                                  *ngTemplateOutlet="zeroData; context:  { $implicit: kpiSelectedFilterObj[kpi?.kpiId] }"></ng-container>
+                                              <ng-container *ngIf="checkIfDataPresent(kpiChartData[kpi?.kpiId]);">
+                                              <app-horizontal-percent-bar-chart [kpiId]="kpi?.kpiId"
+                                                [kpiWidth]="kpi?.kpiDetail?.kpiWidth" [data]="kpiChartData[kpi?.kpiId]"
+                                                [activeTab]="activeIndex">
+                                              </app-horizontal-percent-bar-chart>
+                                            </ng-container>
+                                            <ng-container *ngIf="!checkIfDataPresent(kpiChartData[kpi?.kpiId]);">
+                                              <ng-container
+                                                *ngTemplateOutlet="zeroData; context:  { $implicit: kpiSelectedFilterObj[kpi?.kpiId] }"></ng-container>
                                               </ng-container>
                                             </ng-container>
                                             <app-multiline *ngSwitchDefault [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
