--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -178,18 +178,17 @@
     </div>
     <ng-template pTemplate="content">
         <app-field-mapping-form #fieldMappingForm
-            *ngIf="fieldMappingConfig?.length > 0 && this.selectedToolConfig?.length > 0 && !loading"
+            *ngIf="fieldMappingConfig?.length > 0 && this.selectedToolConfig?.length > 0 && !loadingKPIConfig"
             [disableSave]="disableSave" [fieldMappingMetaData]="fieldMappingMetaData"
             [fieldMappingConfig]="fieldMappingConfig" [formData]="selectedFieldMapping"
             [selectedConfig]="selectedConfig" [selectedToolConfig]="selectedToolConfig" (reloadKPI)="reloadKPI()"
-            [thresholdUnit]="kpiData['kpiDetail']['kpiUnit']"></app-field-mapping-form>
+            [thresholdUnit]="kpiData['kpiDetail']['kpiUnit']"
+            [kpiId]="kpiData?.kpiId" [metaDataTemplateCode]="metaDataTemplateCode" [nodeId]="nodeId" [parentComp]="'kpicard'"></app-field-mapping-form>
     </ng-template>
-    <ng-template pTemplate="footer">
-        <ng-container *ngIf="noData === true && !loading">
-            <h2 class="p-text-center">No Configuration Available</h2>
-        </ng-container>
-    </ng-template>
-    
+    <ng-template pTemplate="footer"></ng-template>
+    <ng-container *ngIf=" noDataKPIConfig && !loadingKPIConfig">
+        <h2 class="p-text-center">No Configuration Available</h2>
+    </ng-container>
     <ng-container *ngIf="loading">
         <div class="overlay">
             <div class="loading-img"></div>
